--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ after_script:
   - git config user.email "${U_EMAIL}"
   - git add .
   - git commit -m "publish"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:${P_BRANCH}
+  - git remote add githuborigin "https://${GH_TOKEN}@${GH_REF}"
+  - git push --force --quiet githuborigin master:${P_BRANCH}
 
 branches:
   only:
