--- a/.travis.yml
+++ b/.travis.yml
@@ -17,17 +17,18 @@ script:
   - dotnet --info
   - dotnet --version
   - dotnet run
+  - ls -a
   
-after_script:
-  - dotnet publish --output publish
-  - cd publish
-  - git init
-  - git config user.name "${U_NAME}"
-  - git config user.email "${U_EMAIL}"
-  - git add .
-  - git commit -m "publish"
-  - git remote add githuborigin "https://${GH_TOKEN}@${GH_REF}"
-  - git push --force --quiet githuborigin master:${P_BRANCH}
+#after_script:
+#  - dotnet publish --output publish
+#  - cd publish
+#  - git init
+#  - git config user.name "${U_NAME}"
+#  - git config user.email "${U_EMAIL}"
+#  - git add .
+#  - git commit -m "publish"
+#  - git remote add githuborigin "https://${GH_TOKEN}@${GH_REF}"
+#  - git push --force --quiet githuborigin master:${P_BRANCH}
 
 branches:
   only:
