--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ after_script:
   - git config user.name "${U_NAME}"
   - git config user.email "${U_EMAIL}"
   - git add .
-  - git commit -m "¸üÐÂÍ¼Æ¬"
+  - git commit -m "down img"
   - git remote add orginimgs "https://${GH_TOKEN}@${GH_REF}"
-  - export abc='date +%Y%m'
+  - export abc='date +%Y%m%d%H%M'
   - echo "year:$($abc)"
   - git push --force --quiet orginimgs master:${P_BRANCH}_$($abc)
 
