--- a/core_ci_test.csproj
+++ b/core_ci_test.csproj
@@ -15,4 +15,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SaveImgs\" />
+  </ItemGroup>
 </Project>
